# confluence

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/confluence_mcp/: __init__.py  client.py  server.py  tools.py
tests/: test_server.py
